# SFML-to-WebAssembly

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: Config.cmake
examples/joystick/: Joystick.cpp
include/SFML/: Config.hpp
include/SFML/Audio/: Music.hpp
include/SFML/Graphics/: RenderTexture.hpp  Text.hpp
include/SFML/System/: NativeActivity.hpp
include/SFML/Window/: Window.hpp  WindowBase.hpp  WindowHandle.hpp
src/SFML/: CMakeLists.txt
src/SFML/System/Android/: Activity.hpp  ResourceStream.hpp
src/SFML/Window/: CMakeLists.txt  ClipboardImpl.hpp  CursorImpl.hpp  EglContext.cpp  InputImpl.hpp  JoystickImpl.hpp  Sensor.cpp  SensorImpl.hpp  SensorManager.cpp  SensorManager.hpp  Window.cpp  WindowBase.cpp  WindowImpl.cpp  WindowImpl.hpp
src/SFML/Window/Android/: SensorImpl.cpp  SensorImpl.hpp  WindowImplAndroid.hpp
src/SFML/Window/Emscripten/: WindowImplEmscripten.hpp
src/SFML/Window/Unix/: GlxContext.cpp
